syntax = "proto3";
package ciao.core.auth;

import "ciao/accounts/account.proto";

// Service for Authentication
service AuthenticationService {
  // Login to the server with basic credentials
  rpc Login(LoginRequest) returns (LoginResult);
}

message LoginRequest {
  oneof identity {
    string user_id = 1;
    string email = 2;
  }
  string secret = 3;
}

message LoginResult {
  ciao.accounts.Account account = 1;
  string token = 2;
}
